text spacing not correct on tv

--- a/css/rent-display.css
+++ b/css/rent-display.css
@@ -69,7 +69,7 @@ video {
 	display: block;
 	margin: 3px;
 	float: none;
-	height: 49px;
+	height: 55px;
 	width: 90%;
 	font-size: 75%;
 }
